added output box

--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
             </div>
             <div>
                 <input id="calculate" type="button" value="calculate" onclick="calculateGPA()">
+                <div>
+                    <input id="output" type="text" value="Your GPA" disabled>
+                </div>
             </div>
+
         </div>
     </body>
 </html>
