--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="css/gpa_style.css">
     <title>GPA calculator</title>
     <script src="script/script.js"></script>
